log/build_2025-06-01_23-02-08/sensor_pub_py/stderr.log
  File "/home/bagus/ichimonji/ros2-logger/install/sensor_pub_py/lib/python3.10/site-packages/sensor_pub_py/sensor_pub.py", line 45
    if __name__='__main__':
       ^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Maybe you meant '==' or ':=' instead of '='?

